# AetherAGI

./: .env.example  .gitignore  1grep  3D_EMBODIMENT_INTEGRATION.md  ACTIVE_VISION_SYSTEM.md  AETHERMIND_COST_ANALYSIS.md  ARCHITECTURE_DIAGRAM.md  AUTONOMOUS_SETUP_GUIDE.md  BACKEND_COMPLETE_SUMMARY.md  Build_specs.md  Build_specs_multimodal.md  Dockerfile  FULL_GAME_BUILD_PIPELINE.md  HELLO_AETHERMIND.txt  JEPA_Simulation.ipynb  LAUNCH_GUIDE.md  LOCAL_TEST_RESULTS.md  PLAYCANVAS_API_GUIDE.md  PLAYCANVAS_DEMO_SETUP.md  PLAYCANVAS_INTEGRATION_GUIDE.md  PLAYCANVAS_MANUAL_SETUP.md  PUBLISHING_CHECKLIST.md  README_PLAYCANVAS_SETUP.md  README_UNITY_SETUP.md  READY_TO_PUBLISH.md  SDK_DISTRIBUTION_GUIDE.md  SimWorld.md  TODO.md  VOICE_SETUP_GUIDE.md  WHITE_PAPER.MD  YC_APPLICATION_SPRING_2026.md  add-voting.md  curated_tool_index.json  docker-compose.yml  extract_roadmap.py  first_contact.py  gta-strat-1.md  gunicorn.conf.py  key.txt  new.md  (+12 more)
.github/: copilot-instructions.md
aether_environment/: .env.example  README.md  index.html  package.json
agi_roadmap/: 00_index.md  01_state_machine.md  02_meta_controller.md  03_differentiable_memory.md  04_practice_loop.md  05_imagination_rollouts.md  06_self_modification.md  07_alignment_layer.md  08_kill_switch.md  add_agi_docs.md
benchmarks/: README.md  __init__.py  aether_client.py  base.py  benchmark_families.txt  colab_runner.py  config.py  dataset_progression.py  memory_integration.py  mistake_analyzer.py  progressive_runner.py  question_generator.py  requirements.txt  runner.py  score_tracker.py  test_llm.py
body/: README.md  __init__.py
brain/: README.md  affective_core.py  core_knowledge_priors.py  empathy_engine.py  imagination_engine.py  jepa_aligner.py  logic_engine.py  safety_inhibitor.py  system_prompts.py
business_docs/: 01_EXECUTIVE_SUMMARY.md  02_COMPETITIVE_ANALYSIS.md  03_INTEGRATION_OPPORTUNITIES.md  04_MARKET_STRATEGY.md  05_PRICING_BUSINESS_MODEL.md  README.md  (+10 more)
sdk/python/: PUBLISHING.md  README.md  pyproject.toml  setup.py
sdk/python/aethermind/: __init__.py  client.py  exceptions.py  models.py
(+241 files in other folders)
