[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethermind"
version = "1.0.0"
description = "Official Python SDK for AetherMind AGI - Real AGI, Not Role-Playing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "AetherMind Team", email = "dev@aethermind.ai"}
]
keywords = ["agi", "ai", "artificial-intelligence", "machine-learning", "sdk", "api", "aethermind"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
async = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://aethermind.ai"
Documentation = "https://aethermind.ai/documentation"
Repository = "https://github.com/United-Visions/AetherAGI"
"Bug Tracker" = "https://github.com/United-Visions/AetherAGI/issues"
Discord = "https://discord.gg/aethermind"

[tool.setuptools]
packages = ["aethermind"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
